<resources>
    <string name="app_name">Story Evolution Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="button_begin">Begin</string>
    <string name="welcome_new_user1">Welcome to Story Evolution Tracker!</string>
    <string name="title_activity_get_user_name">Enter your name</string>
    <string name="enter_name_prompt">What\'s your name?</string>
    <string name="name_hint">Name</string>
    <string name="continue_label">Continue</string>
    <string name="title_activity_news_home_screen">My Tracked Stories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_label">About</string>
    <string name="no_topics_available">There are currently no tracked news stories.\nPress the button below to begin tracking a news story.</string>
    <string name="add_new_story">Add new story</string>
    <string name="enter_url_instr">Enter URL of a news story to begin tracking</string>
    <string name="only_bbc_articles_text">Only BBC News and BBC Sport articles are currently supported.</string>
    <string name="manage_stories_label">Manage Stories</string>
    <string name="my_profile_label">My Profile</string>
    <string name="url_hint">For example: http://www.bbc.co.uk/news/example-12345678</string>
    <string name="begin_tracking">Begin Tracking</string>
    <string name="or_instead">or, instead</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="help_label">Help</string>
    <string name="confirm_story_label">Confirm news story details</string>
    <string name="headline_label">Headline</string>
    <string name="date_pub_label">Date published</string>
    <string name="cancel">Cancel</string>
    <string name="view_timeline_label">View timeline</string>
    <string name="timeline_label">Timeline</string>
    <string name="view_online">View Online</string>
    <string name="manually_fetch_label">Fetch new stories</string>
    <string name="delete_story_text">Delete Story</string>
    <string name="no_topics_to_manage_text">There are no tracked stories to manage.</string>
    <string name="background_update_freq">How often to check for new updates:</string>
    <string name="every15mins">Every 15 minutes</string>
    <string name="every30mins">Every 30 minutes</string>
    <string name="everyHour">Every hour</string>
    <string name="every6Hours">Every 6 hours</string>
    <string name="onceAday">Once a day</string>
    <string name="never">Never - manual updates only</string>
    <string name="unsuitableFormat">Article is not suitable for tracking, please choose another article</string>
    <string name="notApplicable">Not applicable</string>
    <string name="noInterestsFound">No interests found. Begin tracking stories to register your interests!</string>
    <string name="interests">Interests</string>
    <string name="which_news_sources">Which news sources are allowed?</string>
    <string name="sources_text">You can track BBC News and BBC Sport articles. Support for new sources will be added in the future.</string>
    <string name="how_to_track">How do I begin tracking news stories?</string>
    <string name="option1">Option 1</string>
    <string name="option1instr">Open a BBC article in your device\'s browser. Copy the URL of the page. Press the add new story button and paste the URL into the text field or press the \"Copy from Clipboard\" button. This format is accepted:</string>
    <string name="option1example">e.g. http://www.bbc.co.uk/news/business-37159288</string>
    <string name="option2">Option 2</string>
    <string name="option2example">e.g. Ryan Lochte: Speedo and Ralph Lauren end sponsorship - http://www.bbc.co.uk/news/business-37159288</string>
    <string name="what_are_pink_words">What are the words with the pink backgrounds?</string>
    <string name="pink_words_expl">These are topic words that work like tags for representing the main topic of a story. These get updated when you upvote or downvote an article in your timeline.</string>
    <string name="what_is_a_timeline">What is a timeline?</string>
    <string name="timeline_expl">It shows how your news story progresses over time. Newer developments are on the top of the timeline. These updates are retrieved automatically.</string>
    <string name="how_to_get_new_updates">How do I get new updates for my tracked stories?</string>
    <string name="how_to_get_new_updates_expl">You can either pull the My Tracked Stories screen down to manually refresh, or set an automatic background update frequency in the settings.</string>
    <string name="what_is_a_story">What are the entries on the My Tracked Stories screen?</string>
    <string name="what_is_a_story_expl">Each entry is one of your tracked stories. A new one is created for each article you submit. The main text is the signature of the most recent article for that story. They are sorted from most to least recent.</string>
    <string name="what_is_a_signature">What is a signature?</string>
    <string name="what_is_a_signature_expl">This is a quick summary of an article. You can see each development\'s signature in the timeline.</string>
    <string name="what_are_thumbsup_thumbsdown">What do the thumbs-up and thumbs-down buttons in the timeline do?</string>
    <string name="what_are_thumbsup_thumbsdown_expl">You can provide feedback on each automatically retrieved article. If an article fits exactly what you want to read about, you can give it a thumbs-up
        to upvote it. The topic words of that article get strengthed for the story and new articles in the future will attempt to be more about those topic words. It\'s similar for downvoting an article. More feedback equals more
        precise articles in the future.</string>
    <string name="version">v1.0</string>
    <string name="about_prog">This app is part of a project for King\'s College London, created by Violet Avkhukova.</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="thx_to_git">Thanks to <a href="https://github.com/cheeriojs/cheerio">cheerio</a>,
        <a href="https://github.com/NaturalNode/natural">natural</a>, <a href="https://github.com/dariusk/pos-js">pos-js</a>,
        and <a href="https://github.com/nlp-compromise/nlp_compromise">nlp-compromise</a> for some of the backend functionality.</string>
    <string name="thx_for_icon">Thanks to <a href="http://www.flaticon.com/authors/freepik">Freepik</a> at
        <a href="www.flaticon.com">flaticon</a> for the app logo.</string>
    <string name="contact_info_label">Contact Information</string>
    <string name="contact_info_info">You can send me feedback or bugs to <a href="mailto:violetavkhukova@gmail.com">my email (press here)</a>.</string>
</resources>
