<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent_material_light" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_name_prompt"
        android:textSize="40dp"
        android:textAlignment="center"
        android:paddingTop="50dp"
        android:textColor="@color/White"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:hint="@string/name_hint"
        android:textColorHint="@color/lightTeal"
        android:textColor="@color/White"
        android:id="@+id/userName"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_label"
        android:layout_gravity="center"
        android:textColor="@color/White"
        android:background="@color/colorPrimary"
        android:onClick="onContinue"
        />

</LinearLayout>
