<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.storyevolutiontracker.ConfirmArticle"
    android:background="@color/lightTeal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_story_label"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/White"
        android:background="@color/lightTeal"
        android:backgroundTint="@color/lightTeal"
        android:backgroundTintMode="multiply"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="3"
        android:shadowColor="@color/darkTeal"
        android:padding="5dp"
        android:id="@+id/confirmtext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline_label"
        android:layout_below="@+id/confirmtext"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/headline_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_label"
        android:layout_marginStart="40dp"
        android:id="@+id/headline_field"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_pub_label"
        android:layout_below="@+id/headline_field"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/datepub_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datepub_label"
        android:layout_marginStart="40dp"
        android:id="@+id/datepub_field"
        android:textSize="16sp"/>

</RelativeLayout>
